--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -8,6 +8,12 @@ h1 {
     margin-bottom: 16px;
 }
 
+h2 {
+    font-size: 1.4em;
+    font-weight: bold;
+    margin-bottom: 16px;
+}
+
 p {
     margin-bottom: 16px;
 }
